--- a/index.html
+++ b/index.html
@@ -6,66 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Alert</title>
 </head>
-<style>
-body{
-    background-image: url("colors.png");
-    margin: 150px;
-    outline: none;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    margin-left: 400px;
-    margin-bottom: 200px;
-    background-size: cover;
-}
-button{
-    width:277px;
-    background-color: rgb(152, 152, 229);
-    margin-top: 20px;
-}
-form{
-    height: 260px;
-    width: 600px;
-    
-}
-.name{
-    height: 10px;
-    width:270px;
-    border-top: 2px black;
-    border-right: 2px black;
-    border-left: 2px black;
-    font-size: 12px;
-    background: transparent;
-}
-h{
-    font-weight:300px;
-    font-size: 14px;
-}
-</style>
-<body>
-<form>
-    <h1>Custom Alert</h1>
-    <table>
-        <tr>
-            <td>
-                <h>Name</h><br><br>
-                <input type="text" class="name" placeholder="Enter your Name" maxlength="16" minlength="3" required>
-            </td>
-        </tr>
-        <tr>
-            <td><h>Age</h><br><br>
-                <input type="number" class="name" min="18" max="55" placeholder="Enter your age" required>
-            </td>
-        </tr>
-        <tr>
-            <td><h>Email</h><br><br>
-                <input type="email" class="name" placeholder="Enter your email address" required>
-            </td>
-        </tr>
-        <tr>
-            <td rowspan="3" align="center"><button type="submit">Submit</button></td>
-        </tr>
-    </table>
-</form>
+<body class="background" style="font-family:sans-serif ;">
+    <link rel="stylesheet" href="index.css">
+        <form>
+            <h1 style="font-size:50px;">Custom Alert</h1>
+            <h4>Name</h4>
+            <input type="text" placeholder="Enter your name" required>
+            <h4>Age</h4>
+            <input type="number" placeholder="Enter your age" max="55" min="18" required>
+            <h4>Email</h4>
+            <input type="email" placeholder="Enter your email" required>
+            <br>
+             <button type="submit">Submit</button>
+        </form>
 
+        <img src="./htmlimg.png" style="height: 100%; width:110px; padding-left:13%; margin-top:3%">
+        <img src="./cssimg.png" style="height: 100%; width:80px; padding-left:2%; margin-top:3%">
+        <img src="./jsimage.png" style="height: 100%; width:110px; margin-left:-165px; margin-bottom:-5%">
+        <div class="alert success"> 
+            <h5>Your registration was successfully!</h5>
+          </div>
+          <div class="alert warning">
+            <h5>The field is not correct!</h5>
+          </div>
+          <div class="alert info">
+            <h5>You need to fill out all the fields!</h5>
+          </div>
+          <div class="alert">
+            <h5>You need to fill out all the fields!</h5>
+          </div>
+    </body>
+</html>
 </body>
 </html>
